added announcement pages

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1235,12 +1235,20 @@ video {
 	--tw-aspect-w: 12;
 }
 
+.aspect-w-16 {
+	--tw-aspect-w: 16;
+}
+
 .aspect-h-2 {
 	--tw-aspect-h: 2;
 }
 
 .aspect-h-7 {
 	--tw-aspect-h: 7;
+}
+
+.aspect-h-9 {
+	--tw-aspect-h: 9;
 }
 
 .sr-only {
@@ -1337,6 +1345,18 @@ video {
 	margin-top: 1.5rem !important;
 }
 
+.mt-4 {
+	margin-top: 1rem !important;
+}
+
+.mt-12 {
+	margin-top: 3rem !important;
+}
+
+.-mr-48 {
+	margin-right: -12rem !important;
+}
+
 .-mr-2 {
 	margin-right: -0.5rem !important;
 }
@@ -1361,16 +1381,8 @@ video {
 	margin-left: 2rem !important;
 }
 
-.mt-12 {
-	margin-top: 3rem !important;
-}
-
 .mb-12 {
 	margin-bottom: 3rem !important;
-}
-
-.mt-4 {
-	margin-top: 1rem !important;
 }
 
 .mt-10 {
@@ -1421,16 +1433,20 @@ video {
 	display: none !important;
 }
 
+.h-12 {
+	height: 3rem !important;
+}
+
+.h-6 {
+	height: 1.5rem !important;
+}
+
 .h-full {
 	height: 100% !important;
 }
 
 .h-8 {
 	height: 2rem !important;
-}
-
-.h-6 {
-	height: 1.5rem !important;
 }
 
 .h-5 {
@@ -1441,16 +1457,20 @@ video {
 	height: 2.5rem !important;
 }
 
-.h-12 {
-	height: 3rem !important;
-}
-
 .h-0 {
 	height: 0px !important;
 }
 
 .h-64 {
 	height: 16rem !important;
+}
+
+.w-12 {
+	width: 3rem !important;
+}
+
+.w-6 {
+	width: 1.5rem !important;
 }
 
 .w-full {
@@ -1461,10 +1481,6 @@ video {
 	width: auto !important;
 }
 
-.w-6 {
-	width: 1.5rem !important;
-}
-
 .w-5 {
 	width: 1.25rem !important;
 }
@@ -1473,8 +1489,8 @@ video {
 	width: 100vw !important;
 }
 
-.w-12 {
-	width: 3rem !important;
+.max-w-xl {
+	max-width: 36rem !important;
 }
 
 .max-w-7xl {
@@ -1690,6 +1706,16 @@ video {
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity)) !important;
 }
 
+.bg-white {
+	--tw-bg-opacity: 1 !important;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity)) !important;
+}
+
+.bg-indigo-600 {
+	--tw-bg-opacity: 1 !important;
+	background-color: rgba(79, 70, 229, var(--tw-bg-opacity)) !important;
+}
+
 .bg-gray-50 {
 	--tw-bg-opacity: 1 !important;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity)) !important;
@@ -1698,11 +1724,6 @@ video {
 .bg-indigo-800 {
 	--tw-bg-opacity: 1 !important;
 	background-color: rgba(55, 48, 163, var(--tw-bg-opacity)) !important;
-}
-
-.bg-white {
-	--tw-bg-opacity: 1 !important;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity)) !important;
 }
 
 .bg-blue-800 {
@@ -1718,11 +1739,6 @@ video {
 .bg-blue-700 {
 	--tw-bg-opacity: 1 !important;
 	background-color: rgba(29, 78, 216, var(--tw-bg-opacity)) !important;
-}
-
-.bg-indigo-600 {
-	--tw-bg-opacity: 1 !important;
-	background-color: rgba(79, 70, 229, var(--tw-bg-opacity)) !important;
 }
 
 .bg-gray-200 {
@@ -1752,14 +1768,14 @@ video {
 	padding: 1.5rem !important;
 }
 
-.py-24 {
-	padding-top: 6rem !important;
-	padding-bottom: 6rem !important;
-}
-
 .px-4 {
 	padding-left: 1rem !important;
 	padding-right: 1rem !important;
+}
+
+.py-24 {
+	padding-top: 6rem !important;
+	padding-bottom: 6rem !important;
 }
 
 .py-16 {
@@ -1802,6 +1818,18 @@ video {
 	padding-bottom: 0.75rem !important;
 }
 
+.pt-16 {
+	padding-top: 4rem !important;
+}
+
+.pb-32 {
+	padding-bottom: 8rem !important;
+}
+
+.pl-4 {
+	padding-left: 1rem !important;
+}
+
 .pt-8 {
 	padding-top: 2rem !important;
 }
@@ -1814,16 +1842,22 @@ video {
 	padding-bottom: 1.5rem !important;
 }
 
-.pt-16 {
-	padding-top: 4rem !important;
-}
-
 .pb-20 {
 	padding-bottom: 5rem !important;
 }
 
 .text-center {
 	text-align: center !important;
+}
+
+.text-3xl {
+	font-size: 1.875rem !important;
+	line-height: 2.25rem !important;
+}
+
+.text-lg {
+	font-size: 1.125rem !important;
+	line-height: 1.75rem !important;
 }
 
 .text-4xl {
@@ -1836,11 +1870,6 @@ video {
 	line-height: 1.75rem !important;
 }
 
-.text-lg {
-	font-size: 1.125rem !important;
-	line-height: 1.75rem !important;
-}
-
 .text-base {
 	font-size: 1rem !important;
 	line-height: 1.5rem !important;
@@ -1849,11 +1878,6 @@ video {
 .text-sm {
 	font-size: 0.875rem !important;
 	line-height: 1.25rem !important;
-}
-
-.text-3xl {
-	font-size: 1.875rem !important;
-	line-height: 2.25rem !important;
 }
 
 .font-extrabold {
@@ -1901,6 +1925,16 @@ video {
 	color: rgba(255, 255, 255, var(--tw-text-opacity)) !important;
 }
 
+.text-gray-900 {
+	--tw-text-opacity: 1 !important;
+	color: rgba(17, 24, 39, var(--tw-text-opacity)) !important;
+}
+
+.text-gray-500 {
+	--tw-text-opacity: 1 !important;
+	color: rgba(107, 114, 128, var(--tw-text-opacity)) !important;
+}
+
 .text-indigo-100 {
 	--tw-text-opacity: 1 !important;
 	color: rgba(224, 231, 255, var(--tw-text-opacity)) !important;
@@ -1914,16 +1948,6 @@ video {
 .text-gray-400 {
 	--tw-text-opacity: 1 !important;
 	color: rgba(156, 163, 175, var(--tw-text-opacity)) !important;
-}
-
-.text-gray-500 {
-	--tw-text-opacity: 1 !important;
-	color: rgba(107, 114, 128, var(--tw-text-opacity)) !important;
-}
-
-.text-gray-900 {
-	--tw-text-opacity: 1 !important;
-	color: rgba(17, 24, 39, var(--tw-text-opacity)) !important;
 }
 
 .text-gray-600 {
@@ -2172,6 +2196,10 @@ video {
 		grid-column: span 2 / span 2 !important;
 	}
 
+	.sm\:mt-16 {
+		margin-top: 4rem !important;
+	}
+
 	.sm\:mt-0 {
 		margin-top: 0px !important;
 	}
@@ -2239,14 +2267,14 @@ video {
 		padding: 2rem !important;
 	}
 
-	.sm\:py-32 {
-		padding-top: 8rem !important;
-		padding-bottom: 8rem !important;
-	}
-
 	.sm\:px-6 {
 		padding-left: 1.5rem !important;
 		padding-right: 1.5rem !important;
+	}
+
+	.sm\:py-32 {
+		padding-top: 8rem !important;
+		padding-bottom: 8rem !important;
 	}
 
 	.sm\:px-0 {
@@ -2257,6 +2285,10 @@ video {
 	.sm\:px-8 {
 		padding-left: 2rem !important;
 		padding-right: 2rem !important;
+	}
+
+	.sm\:pl-6 {
+		padding-left: 1.5rem !important;
 	}
 
 	.sm\:text-5xl {
@@ -2276,6 +2308,10 @@ video {
 }
 
 @media (min-width: 768px) {
+
+	.md\:-mr-16 {
+		margin-right: -4rem !important;
+	}
 
 	.md\:mt-0 {
 		margin-top: 0px !important;
@@ -2357,6 +2393,10 @@ video {
 		bottom: 0px !important;
 	}
 
+	.lg\:left-0 {
+		left: 0px !important;
+	}
+
 	.lg\:left-auto {
 		left: auto !important;
 	}
@@ -2389,12 +2429,26 @@ video {
 		grid-row-start: 1 !important;
 	}
 
-	.lg\:ml-4 {
-		margin-left: 1rem !important;
+	.lg\:m-0 {
+		margin: 0px !important;
+	}
+
+	.lg\:mx-auto {
+		margin-left: auto !important;
+		margin-right: auto !important;
+	}
+
+	.lg\:mx-0 {
+		margin-left: 0px !important;
+		margin-right: 0px !important;
 	}
 
 	.lg\:mt-0 {
 		margin-top: 0px !important;
+	}
+
+	.lg\:ml-4 {
+		margin-left: 1rem !important;
 	}
 
 	.lg\:block {
@@ -2417,6 +2471,10 @@ video {
 		height: 100% !important;
 	}
 
+	.lg\:w-auto {
+		width: auto !important;
+	}
+
 	.lg\:w-full {
 		width: 100% !important;
 	}
@@ -2427,6 +2485,10 @@ video {
 
 	.lg\:w-1\/2 {
 		width: 50% !important;
+	}
+
+	.lg\:max-w-7xl {
+		max-width: 80rem !important;
 	}
 
 	.lg\:max-w-none {
@@ -2447,12 +2509,16 @@ video {
 		transform: var(--tw-transform) !important;
 	}
 
-	.lg\:grid-cols-3 {
-		grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+	.lg\:grid-flow-col-dense {
+		grid-auto-flow: column dense !important;
 	}
 
 	.lg\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+	}
+
+	.lg\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
 	}
 
 	.lg\:items-start {
@@ -2461,6 +2527,11 @@ video {
 
 	.lg\:justify-start {
 		justify-content: flex-start !important;
+	}
+
+	.lg\:gap-24 {
+		grid-gap: 6rem !important;
+		gap: 6rem !important;
 	}
 
 	.lg\:gap-8 {
@@ -2499,6 +2570,11 @@ video {
 	.lg\:py-16 {
 		padding-top: 4rem !important;
 		padding-bottom: 4rem !important;
+	}
+
+	.lg\:px-0 {
+		padding-left: 0px !important;
+		padding-right: 0px !important;
 	}
 
 	.lg\:py-24 {
