--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -29,8 +29,8 @@
           </svg>
         </div>
       </div>
-      <div class="relative px-4 sm:px-6 lg:px-8">
-        <div class="text-lg max-w-prose mx-auto">
+      <div class="relative px-4 sm:px-6 lg:px-8" id="plan-visit">
+        <div class="text-lg max-w-prose mx-auto prose">
         {{ content }}
         </div>
       </div>
