--- a/resources/views/announcements.antlers.html
+++ b/resources/views/announcements.antlers.html
@@ -1,9 +1,11 @@
 {{ partial:partials/_pageheader}}
+
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="relative bg-white pt-16 pb-32 overflow-hidden">
-    {{announcements}}
-    <div class="relative">
-      <div class="lg:mx-auto lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24">
+  <div class="relative">
+    {{collection from="announcements" }}
+ 
+      <div class="lg:mx-auto lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24 ">
         <div class="px-4 max-w-xl mx-auto sm:px-6 lg:py-16 lg:max-w-none lg:mx-0 lg:px-0">
           <div>
             <div>
@@ -16,44 +18,29 @@
             </div>
             <div class="mt-6">
               <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">
-                Stay on top of customer support
+                <a href="{{url}}">
+                {{title}}
+              </a>
               </h2>
-              <p class="mt-4 text-lg text-gray-500">
-                Semper curabitur ullamcorper posuere nunc sed. Ornare iaculis bibendum malesuada faucibus lacinia porttitor. Pulvinar laoreet sagittis viverra duis. In venenatis sem arcu pretium pharetra at. Lectus viverra dui tellus ornare pharetra.
+              <div class="mt-4 text-lg text-gray-500">
+                <p> {{short_description}} </br>
+                <a href="{{url}}" class="underline text-white block mt-4">Read More</a>
               </p>
-              <div class="mt-6">
-                <a href="#" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
-                  Get started
-                </a>
               </div>
+              
             </div>
           </div>
-          <div class="mt-8 border-t border-gray-200 pt-6">
-            <blockquote>
-              <div>
-                <p class="text-base text-gray-500">
-                  &ldquo;Cras velit quis eros eget rhoncus lacus ultrices sed diam. Sit orci risus aenean curabitur donec aliquet. Mi venenatis in euismod ut.&rdquo;
-                </p>
-              </div>
-              <footer class="mt-3">
-                <div class="flex items-center space-x-3">
-                  <div class="flex-shrink-0">
-                    <img class="h-6 w-6 rounded-full" src="https://images.unsplash.com/photo-1509783236416-c9ad59bae472?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="">
-                  </div>
-                  <div class="text-base font-medium text-gray-700">
-                    Marcia Hill, Digital Marketing Manager
-                  </div>
-                </div>
-              </footer>
-            </blockquote>
-          </div>
         </div>
-        <div class="mt-12 sm:mt-16 lg:mt-0">
-          <div class="pl-4 -mr-48 sm:pl-6 md:-mr-16 lg:px-0 lg:m-0 lg:relative lg:h-full">
-            <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none" src="https://tailwindui.com/img/component-images/inbox-app-screenshot-1.jpg" alt="Inbox user interface">
+        <div class="mt-12 sm:mt-16 lg:mt-0"> 
+          <div class="pl-4 -mr-48 sm:pl-6 md:-mr-16 lg:px-0 lg:m-0 lg:relative lg:h-full "> 
+            <div class="aspect-w-16 aspect-h-9">
+            <img class="w-full lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none object-cover" src="{{featured_image}}">
+         
+          </div>
           </div>
         </div>
       </div>
-    </div>
-    {{/announcements}}
+ 
+    {{/collection}}
+  </div>
   </div>
