--- a/resources/views/partials/home/_announcements.antlers.html
+++ b/resources/views/partials/home/_announcements.antlers.html
@@ -1,4 +1,6 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
+{{collection:announcements as="posts" important:is="true"}}
+{{ if posts }}
 <div class="bg-blue-800 overflow-hidden">
   <div class="relative max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
     <svg class="absolute top-0 left-full transform -translate-x-1/2 -translate-y-3/4 lg:left-auto lg:right-full lg:translate-x-2/3 lg:translate-y-1/4" width="404" height="784" fill="none" viewBox="0 0 404 784" aria-hidden="true">
@@ -17,6 +19,8 @@
         </h2>
       </div>
       <dl class="mt-10 space-y-10 sm:space-y-0 sm:grid sm:grid-cols-2 sm:gap-x-8 sm:gap-y-10 lg:mt-0 lg:col-span-2">
+        {{posts}}
+      
         <div>
           <dt>
             <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
@@ -25,31 +29,20 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
               </svg>
             </div>
-            <p class="mt-5 text-lg leading-6 font-bold text-white">Unity Service</p>
+            <p class="mt-5 text-lg leading-6 font-bold text-white">{{title}}</p>
           </dt>
           <dd class="mt-2 text-base text-blue-100">
-            We'll be doing a joint service with Central Community Church Sunday July 12 at Central Communinity. There will be no service at First Christian that day. <br  />
-            <a href="#" class="underline text-white block mt-4">Read More</a>
+            {{short_description}} <br  />
+            <a href="{{url}}" class="underline text-white block mt-4">Read More</a>
           </dd>
         </div>
-        <div>
-          <dt>
-            <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Heroicon name: outline/globe-alt -->
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-              </svg>
-            </div>
-            <p class="mt-5 text-lg leading-6 font-bold text-white">Ball Brothers Concert</p>
-          </dt>
-          <dd class="mt-2 text-base text-blue-100">
-            At Central Community.  September 12th at 6pm. <br  />
-            <a href="#" class="underline text-white block mt-4">Read More</a>
-          </dd>
-        </div>
+        {{/posts}}
+       
 
 
       </dl>
     </div>
   </div>
 </div>
+{{/if }}
+{{/collection:announcements }}
