added map to home page

--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -32,6 +32,7 @@
       <div class="relative px-4 sm:px-6 lg:px-8" id="plan-visit">
         <div class="text-lg max-w-prose mx-auto prose">
         {{ content }}
+        {{church_information:map_embed | raw }}
         </div>
       </div>
 </div>
